[gd_scene load_steps=7 format=3 uid="uid://bqaucpr33qmgi"]

[ext_resource type="Texture2D" uid="uid://c03rlbbw8mj1" path="res://assets/menus/pause-screen.png" id="1_2fo7t"]
[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_jmjo8"]
[ext_resource type="Texture2D" uid="uid://b4mfsq25wrpmc" path="res://assets/ui/exit_button.png" id="3_csx53"]
[ext_resource type="Texture2D" uid="uid://swtqlmo2ui3y" path="res://assets/ui/resume_button_hover.png" id="4_clkvn"]
[ext_resource type="Texture2D" uid="uid://do8hkc8d7fyd1" path="res://assets/ui/resume_button.png" id="4_m4vb2"]
[ext_resource type="Texture2D" uid="uid://vd4lsq4j4n8q" path="res://assets/ui/exit_button_hover.png" id="6_0uv7i"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jmjo8")

[node name="Menu" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.334896
anchor_top = 0.0333333
anchor_right = 0.734896
anchor_bottom = 0.862963
offset_right = -606.0
offset_bottom = -704.0
scale = Vector2(4, 4)
texture = ExtResource("1_2fo7t")
metadata/_edit_use_anchors_ = true

[node name="Volume_Slider" type="HSlider" parent="."]
modulate = Color(0.670588, 0.607843, 0.556863, 1)
offset_left = 847.0
offset_top = 380.0
offset_right = 1242.0
offset_bottom = 396.0
min_value = -10.0
max_value = 10.0

[node name="ResumeButton" type="TextureButton" parent="."]
offset_left = 873.0
offset_top = 150.0
offset_right = 1177.0
offset_bottom = 223.0
texture_normal = ExtResource("4_m4vb2")
texture_hover = ExtResource("4_clkvn")
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="."]
offset_left = 873.0
offset_top = 247.0
offset_right = 1177.0
offset_bottom = 319.0
texture_normal = ExtResource("3_csx53")
texture_hover = ExtResource("6_0uv7i")
stretch_mode = 0

[connection signal="value_changed" from="Volume_Slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
